chore: change INDEX.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="CV.css"> <!--This use to link other file to use in this HTML file-->
+    <link rel="stylesheet" href="style.css"> <!--This use to link other file to use in this HTML file-->
     <link rel="icon" type="image/x-icon"
         href="https://scontent.fsgn5-15.fna.fbcdn.net/v/t39.30808-6/241753544_593993601635374_6398549986998166443_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=9c7eae&_nc_eui2=AeGDNT6GduScXSPSGUXuT78Kgygh8HypluCDKCHwfKmW4Km9KwhENjxNlujzU7zSm7gyGCUB9oLiEHf3Wf5xLk1z&_nc_ohc=Pse93Zgy1WMAX9CKwdg&_nc_ht=scontent.fsgn5-15.fna&oh=00_AfDArNOpSFRzeXnEMFO53tC-pfZFwOUCK_uESpVWh_SssA&oe=65C65C6A">
     <!--This use to show an incon on the page's bar-->
