--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <!--This use to know that this is HTML5 document-->
 <html lang="en">
-
+<!--add comment to check username when pushing project-->
 <head>
     <link rel="stylesheet" href="style.css"> <!--This use to link other file to use in this HTML file-->
     <link rel="icon" type="image/x-icon"
